--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" href="about.css">
+<head><link rel="stylesheet" href="about.css"> <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
-
+    <h1><a href="index.html">Главная</a></h1>
 </head>
 <body>
 <style>
@@ -10,8 +10,9 @@
         background-color: brown;
     }
 </style>
-
-<img src="my_photo.jpg" class="round-image" alt="Круглое изображение"  style="position: relative; top: 10px; left: 750px;" >
+<div class="frame">
+<img src="my_photo.jpg" class="round-image" alt="Круглое изображение" alt="nature" style="position: relative; top: -53px; left: -25px;" >
+</div>
 <h1 style="text-align: center;">О себе Глеб 19 лет, родился в г Кривой рог, тут и живу. Не пью, не курю, не употребляю
     стараюсь вести здоровый образ жизни, ведь спорт важен в нашей рутине. По жизни ахуенный человек, даже некоторые люди
     меня спрашивают почему у Глеба нет девушки, я им говорю это, у девушек нету Глеба ведь такого ахуенного мужчины
@@ -23,15 +24,38 @@
 
     <p>HTML</p>
     <div class="sill-bar">
-        <div class="skills-persentage" a="90%" style="width: 90%"></
+        <div class="skills-persentage" a="82%" style="width: 90%"></
      div>
     </div>
 
     <p>CSS</p>
     <div class="sill-bar">
-        <div class="skills-persentage" a="90%" style="width: 87%"></
+        <div class="skills-persentage" a="85%" style="width: 90%"></
         div>
     </div>
+
+    <p>Java</p>
+    <div class="sill-bar">
+        <div class="skills-persentage" a="89%" style="width: 90%"></
+        div>
+    </div>
+
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
+    </style>
+
+    <meta name="viewport" content="width=device-width, initial-scale=0.1">
+
+
+
+
+
+
+
+
 
 
 
