--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+<head> <link rel="stylesheet" href="contact.css">
+    <meta charset="UTF-8">
+    <title>Центрирование</title>
+
+
+
+</head> <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
+
+</div> <style>
+
+
+
+    body {
+        background-color: brown;
+
+    }
+</style>
+
+<!DOCTYPE html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Центрирование</title>
 </head>
-<body>
+<body style="background-color: brown; margin: 0;">
+
+<div style="text-align: center; margin-top: 20px;">
+    <!-- Кнопка -->
+    <a href="index.html" style="font-size: 32px; font-weight: bold; color: #2e0c95; text-decoration: none;">
+        Главная
+    </a>
+
+    <!-- Форма -->
+    <h2>Контакты</h2>
+    <form>
+        Your name <input type="text" placeholder="Enter your name..">
+        Your email <input type="email" placeholder="Enter your email..">
+        Your number <input type="text" placeholder="Enter your number..">
+        Select course
+        <select>
+            <option disabled selected>disabled selected</option>
+        </select>
+        <input type="submit" value="Send data">
+    </form>
+</div>
+
 </body>
 </html>
+
+
+
+
+
+   </div>
+<!--contact section end -->
+
+</body>
+
+<form style="width: 300px; margin: auto;">
+    <!-- Поля формы -->
+</form>
+<div style="display: flex; justify-content: center; align-items: center; height: 100px">
+    <form style="width: 1400px;">
+        <!-- Поля формы -->
+    </form>
+
+</html>
+    <div style="width: 2400px; height: 10px; margin: 0 auto;">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1126.1485688277382!2d35.15889203766222!3d47.830917955536194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dc678c60222573%3A0xe959302a24dcec6a!2z0L_Quy4g0J_Rg9GI0LrQuNC90LAsIDIsINCX0LDQv9C-0YDQvtC20YzQtSwg0JfQsNC_0L7RgNC-0LbRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNjkwOTU!5e0!3m2!1sru!2sua!4v1715431089883!5m2!1sru!2sua" width="500" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+
+    </div>
+
+<style>
+    html {
+        scroll-behavior: smooth;
+    }
+
+</style>
+
+<meta name="viewport" content="width=device-width, initial-scale=0.1">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
