--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
+</head> <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
 <h1> Всем привет меня зовут Вьюнник Глеб Николаевич мне 19 лет живу в г.Кривой Рог, живу тут всю свою жизнь, но есть
     моменты когда хочется просто взять и уехать куда подальше от этого города, ведь время как буд-то остановилось
     и ничего в єтом городе не развивается кроме наркоманов и бомжей, сам я по себе адекватный, добрый, позитивный,
@@ -28,9 +28,9 @@
 <header>
     <nav>
         <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="about.html">О бо мне</a></li>
-            <li><a href="contact.html">Контакты</a></li>
+            <h1><a href="index.html">Главная</a></h1>
+            <h1><a href="about.html">О бо мне</a></h1>
+            <h1><a href="contact.html">Контакты</a></h1>
         </ul>
     </nav>
 </header>
@@ -62,30 +62,39 @@
 <div class="works-container">
 
     <div class="work-card">
-        <img src="https://i.pinimg.com/1200x/cd/48/29/cd4829d281343826dcb4ce558d1325f9.jpg" alt="Работа 1">
-        <h3>1 работа в офисе</h3>
-        <p>Человек просто сидит за компьютером и работает.</p>
+        <img src="https://i.pinimg.com/1200x/cd/48/29/cd4829d281343826dcb4ce558d1325f9.jpg" style="height: auto;" alt="Работа 1">
+        <h1>1 работа в офисе</h1>
+        <h1>Человек просто сидит за компьютером и работает.</h1>
     </div>
 
     <div class="work-card">
-        <img src="https://i.pinimg.com/736x/04/44/59/0444591b20dedc2552c3686f484fea86.jpg" alt="Работа 2">
-        <h3>Человек Занимается боксом</h3>
-        <p>Вложив все силы он добился вершины, и уже дальше нет пути назад.</p>
+        <img src="https://i.pinimg.com/736x/04/44/59/0444591b20dedc2552c3686f484fea86.jpg" style="height: auto;" alt="Работа 2">
+        <h1>Человек Занимается боксом</h1>
+        <h1>Вложив все силы он добился вершины, и уже дальше нет пути назад.</h1>
     </div>
 
     <div class="work-card">
-        <img src="https://i.pinimg.com/1200x/8b/28/98/8b289875b10dc008cec6587b4f36551c.jpg" alt="Работа 3">
-        <h3>Работа Доном Мафии</h3>
-        <p>Работа Дона мафии очень сложная, ведь одно решение может повлиять на цепочку событый в ммре.</p>
+        <img src="https://i.pinimg.com/1200x/8b/28/98/8b289875b10dc008cec6587b4f36551c.jpg" style="height: auto;" alt="Работа 3">
+        <h1>Работа Доном Мафии</h1>
+        <h1>Работа Дона мафии очень сложная, ведь одно решение может повлиять на цепочку событый в ммре.</h1>
     </div>
 
     <div class="work-card">
-        <img src="https://i.pinimg.com/736x/63/79/37/6379372259fb02dfee2ce8a7c626cbe7.jpg" alt="Работа 4">
-        <h3>Человек работает пожарником</h3>
-        <p>Он трудиться 24 на 7 чтобы спасть людей, и обеспечить свою семью.</p>
+        <img src="https://i.pinimg.com/736x/63/79/37/6379372259fb02dfee2ce8a7c626cbe7.jpg" style="height: auto;" alt="Работа 4">
+        <h1>Человек работает пожарником</h1>
+        <h1>Он трудиться 24 на 7 чтобы спасать людей, и обеспечить свою семью.</h1>
     </div>
-
-
 
 
 </html>
+
+<style>
+    html {
+        scroll-behavior: smooth;
+    }
+
+</style>
+
+
+
+
